[workspace]
members = [
    ".",
    "derive",
]

[workspace.lints.rust]
unused_assignments = "allow" # Workaround for https://github.com/rust-lang/rust/issues/147648

[package]
name = "knus"
version = "3.3.1"
edition = "2024"
description = """
    Another KDL language implementation
"""
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration", "parser"]
categories = ["parser-implementations", "config", "encoding"]
homepage = "https://github.com/TheLostLambda/knus"
documentation = "https://docs.rs/knus"
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Using latest commit until chumsky 0.13.0 is released
chumsky = { git = "https://github.com/zesterer/chumsky.git", rev = "b81c34c", default-features=false }
knus-derive = { path="./derive", version= "3.3.1", optional=true }
base64 = { version="0.22.1", optional=true }
unicode-width = { version="0.2.0", optional=true }
minicbor = { version="0.26.5", optional=true, features=["std", "derive"] }
miette = "7.6.0"
thiserror = "2.0.12"

[dev-dependencies]
miette = { version="7.6.0", features=["fancy"] }
assert-json-diff = "2.0.2"
serde_json = "1.0"

[features]
default = ["derive", "base64", "line-numbers"]
derive = ["knus-derive"]
line-numbers = ["unicode-width"]
